# dyfi-dns-updater

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml  updater.py
.github/workflows/: tests.yml
systemd/: dyfi-dns-updater.service
tests/: conftest.py  test_config.py  test_main.py  test_updater.py
